--- a/Config
+++ b/Config
@@ -1,17 +1,17 @@
 import os
 
 class Config(object):
-    API_ID = int(6435225) #dont change
-    API_HASH = "4e984ea35f854762dcde906dce426c2d" #dont change 
+    API_ID = int(28645948) #dont change
+    API_HASH = "0d1cca3a9f4f4beb7ae8508f05ec4fcd" #dont change 
     BOT_TOKEN = "" #fill your telegram bot token
-    STRING_SESSION = "" #an Telethon Session 
+    STRING_SESSION = "6570587888:AAGtvjvPgrxjIma7UJ91kRoUGKPlBl46OSY" #an Telethon Session 
     MANAGEMENT_MODE = None #Dont change
     HEROKU_MODE = None #dont change
-    BOT_USERNAME = "Zaid2_Robot" #Your Bot username 
-    SUPPORT = "TheSupportChat" #optional
-    CHANNEL = "TheUpdatesChannel" #optional
+    BOT_USERNAME = "filter_file_robot" #Your Bot username 
+    SUPPORT = "Miraculous_brothers_hindi_dubbed" #optional
+    CHANNEL = "Miraculous_brothers_hindi_dubbed" #optional
     START_IMG = "https://telegra.ph/file/35a7b5d9f1f2605c9c0d3.png"
     CMD_IMG = "https://telegra.ph/file/66518ed54301654f0b126.png"
-    ASSISTANT_ID = int(1234567890) #your string added account user id..
+    ASSISTANT_ID = int(6425682035) #your string added account user id..
     AUTO_LEAVE_TIME = int(54000) # in seconds
     AUTO_LEAVE = True #Optional
